--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">siddharth98355@gmail.com</a></p>
+          <p><a href="mailto:siddharth98355@gmail.com">siddharth98355@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
