Project1_index.html

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="https://images.unsplash.com/photo-1591635025101-9a66487172ff?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="Project 3"
+                src="https://images.unsplash.com/photo-1543393716-375f47996a77?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Accident"
                 class="project-img"
               />
             </div>
@@ -264,13 +264,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/siddharth7739/EDA_ON_US_ACCIDENTS'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://www.kaggle.com/code/mlgodsiddharth/eda-and-visualization/edit'"
               >
                 Live Demo
               </button>
