--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">EDA on US Accidents</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
