--- a/index.html
+++ b/index.html
@@ -280,22 +280,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="https://images.unsplash.com/photo-1591635025101-9a66487172ff?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="Project 1"
+                src="https://plus.unsplash.com/premium_photo-1710409625244-e9ed7e98f67b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="Movie Recommendation System"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Movie Recommendation System</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/siddharth7739/Recomm'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://recom-live.onrender.com/'"
               >
                 Live Demo
               </button>
