--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Movie Recommendation System</h2>
+            <h2 class="experience-sub-title project-title">Movie Recom System</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
